--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            position: relative;
         }
         .light { background-color: #f0d9b5; }
         .dark { background-color: #b58863; }
@@ -36,48 +37,64 @@
 <body>
     <div id="board">
         <!-- Rząd 1 - Białe figury -->
-        <div class="square light">🔲</div>
+        <div class="square light">
+            <!-- Biała Wieża -->
+            <svg viewBox="0 0 45 45">
+                <rect x="10" y="10" width="25" height="10" stroke="black" stroke-width="2" fill="white"/>
+                <rect x="15" y="20" width="15" height="20" stroke="black" stroke-width="2" fill="white"/>
+                <rect x="12" y="40" width="21" height="5" stroke="black" stroke-width="2" fill="white"/>
+            </svg>
+        </div>
         <div class="square dark">
-            <!-- Biały skoczek -->
+            <!-- Biały Skoczek -->
             <svg viewBox="0 0 45 45">
                 <path d="M10,35 L35,35 L30,20 L15,20 Z" stroke="black" fill="white"/>
             </svg>
         </div>
         <div class="square light">
-            <!-- Biały goniec -->
+            <!-- Biały Goniec -->
             <svg viewBox="0 0 45 45">
                 <circle cx="22.5" cy="10" r="5" stroke="black" fill="white"/>
                 <path d="M10,35 L35,35 L22.5,15 Z" stroke="black" fill="white"/>
             </svg>
         </div>
         <div class="square dark">
-            <!-- Biały hetman -->
+            <!-- Biały Hetman -->
             <svg viewBox="0 0 45 45">
                 <circle cx="22.5" cy="7" r="4" stroke="black" fill="white"/>
                 <path d="M12,35 L33,35 L22.5,10 Z" stroke="black" fill="white"/>
             </svg>
         </div>
         <div class="square light">
-            <!-- Biały król -->
+            <!-- Biały Król -->
             <svg viewBox="0 0 45 45">
                 <rect x="18" y="6" width="10" height="10" stroke="black" fill="white"/>
                 <path d="M10,35 L35,35 L22.5,15 Z" stroke="black" fill="white"/>
             </svg>
         </div>
-        <div class="square dark"> <!-- Drugi Goniec -->
+        <div class="square dark">
+            <!-- Biały Goniec -->
             <svg viewBox="0 0 45 45">
                 <circle cx="22.5" cy="10" r="5" stroke="black" fill="white"/>
                 <path d="M10,35 L35,35 L22.5,15 Z" stroke="black" fill="white"/>
             </svg>
         </div>
-        <div class="square light"> <!-- Drugi Skoczek -->
+        <div class="square light">
+            <!-- Biały Skoczek -->
             <svg viewBox="0 0 45 45">
                 <path d="M10,35 L35,35 L30,20 L15,20 Z" stroke="black" fill="white"/>
             </svg>
         </div>
-        <div class="square dark">🔲</div>
+        <div class="square dark">
+            <!-- Biała Wieża -->
+            <svg viewBox="0 0 45 45">
+                <rect x="10" y="10" width="25" height="10" stroke="black" stroke-width="2" fill="white"/>
+                <rect x="15" y="20" width="15" height="20" stroke="black" stroke-width="2" fill="white"/>
+                <rect x="12" y="40" width="21" height="5" stroke="black" stroke-width="2" fill="white"/>
+            </svg>
+        </div>
 
-        <!-- Rząd 2 - Białe pionki -->
+        <!-- Rząd 2 - Białe Pionki -->
         <script>
             for (let i = 0; i < 8; i++) {
                 document.write(`
@@ -98,7 +115,7 @@
             }
         </script>
 
-        <!-- Rząd 7 - Czarne pionki -->
+        <!-- Rząd 7 - Czarne Pionki -->
         <script>
             for (let i = 0; i < 8; i++) {
                 document.write(`
@@ -112,7 +129,7 @@
             }
         </script>
 
-        <!-- Rząd 8 - Czarne figury -->
+        <!-- Rząd 8 - Czarne Figury -->
         <div class="square dark">🔳</div>
         <div class="square light">
             <!-- Czarny Skoczek -->
@@ -134,25 +151,7 @@
                 <path d="M12,35 L33,35 L22.5,10 Z" stroke="black" fill="black"/>
             </svg>
         </div>
-        <div class="square dark">
-            <!-- Czarny Król -->
-            <svg viewBox="0 0 45 45">
-                <rect x="18" y="6" width="10" height="10" stroke="black" fill="black"/>
-                <path d="M10,35 L35,35 L22.5,15 Z" stroke="black" fill="black"/>
-            </svg>
-        </div>
-        <div class="square light"> <!-- Drugi Czarny Goniec -->
-            <svg viewBox="0 0 45 45">
-                <circle cx="22.5" cy="10" r="5" stroke="black" fill="black"/>
-                <path d="M10,35 L35,35 L22.5,15 Z" stroke="black" fill="black"/>
-            </svg>
-        </div>
-        <div class="square dark"> <!-- Drugi Czarny Skoczek -->
-            <svg viewBox="0 0 45 45">
-                <path d="M10,35 L35,35 L30,20 L15,20 Z" stroke="black" fill="black"/>
-            </svg>
-        </div>
-        <div class="square light">🔳</div>
     </div>
 </body>
 </html>
+
